--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mongoose": "^8.5.1"
   }
 }
