--- a/package.json
+++ b/package.json
@@ -18,9 +18,11 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@nestjs/config": "^3.2.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "mongoose": "^8.5.1"
   }
 }
