Npm | New | tsc-alias, tsconfig-paths : 경로 설정을 위한 모듈 설치

--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "license": "ISC",
   "devDependencies": {
     "lerna": "^8.1.6",
+    "tsc-alias": "^1.8.10",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   },
   "dependencies": {
