--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "workspaces": [
     "frontend",
-    "backend"
+    "backend",
+    "search-service"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
