Feat | package.json : jest에서 alias 경로를 찾기 위해 옵션을 추가하였습니다.

--- a/backend/package.json
+++ b/backend/package.json
@@ -63,6 +63,9 @@
     "collectCoverageFrom": [
       "**/*.(t|j)s"
     ],
+    "moduleNameMapper": {
+      "^@shared/(.*)$": "<rootDir>/../../shared/$1"
+    },
     "coverageDirectory": "../coverage",
     "testEnvironment": "node"
   }
