New | auth_service : nest framework 초기 세팅

--- a/lerna.json
+++ b/lerna.json
@@ -4,7 +4,8 @@
     "frontend",
     "backend",
     "shared",
-    "db"
+    "db",
+    "auth_service"
   ],
   "npmClient": "npm",
   "version": "independent"
