--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,25 +1,30 @@
 {
-  // IntelliSense를 사용하여 가능한 특성에 대해 알아보세요.
-  // 기존 특성에 대한 설명을 보려면 가리킵니다.
-  // 자세한 내용을 보려면 https://go.microsoft.com/fwlink/?linkid=830387을(를) 방문하세요.
   "version": "0.2.0",
   "configurations": [
     {
       "type": "node",
       "request": "launch",
-      "name": "Debug Backend Current Jest",
+      "name": "Debug Jest Tests",
       "program": "${workspaceFolder}/node_modules/.bin/jest",
-      "cwd": "${workspaceFolder}/backend",
       "args": [
         "--runInBand",
         "--config",
-        "${workspaceFolder}/backend/package.json",
+        "${workspaceFolder}/${input:service}/package.json",
         "${relativeFile}",
         "--detectOpenHandles"
       ],
       "console": "integratedTerminal",
       "internalConsoleOptions": "neverOpen",
-      "skipFiles": ["<node_internals>/**"]
+      "skipFiles": ["<node_internals>/**"],
+      "cwd": "${workspaceFolder}/${input:service}"
+    }
+  ],
+  "inputs": [
+    {
+      "id": "service",
+      "type": "pickString",
+      "description": "Select the service folder",
+      "options": ["backend", "auth_service"]
     }
   ]
 }
