--- a/search-service/tsconfig.json
+++ b/search-service/tsconfig.json
@@ -22,5 +22,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["./dist"]
 }
