--- a/auth_service/tsconfig.json
+++ b/auth_service/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends" : "../tsconfig.json",
   "compilerOptions": {
     "strict": true,
     "module": "commonjs",
@@ -11,6 +12,9 @@
     "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": "./",
+    "paths": {
+      "@shared/*": ["../shared/*"]
+    },
     "incremental": true,
     "skipLibCheck": true,
     "strictNullChecks": false,
@@ -18,5 +22,6 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["dist"]
 }
