New | admin_service : 관리자 서비스에 대한 디렉토리 생성

--- a/lerna.json
+++ b/lerna.json
@@ -6,7 +6,8 @@
     "search-service",
     "shared",
     "db",
-    "auth_service"
+    "auth_service",
+    "admin_service"
   ],
   "npmClient": "npm",
   "version": "independent"
