Feat | launch.json : admin_service 디렉토리 경로 추가

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,7 +24,7 @@
       "id": "service",
       "type": "pickString",
       "description": "Select the service folder",
-      "options": ["backend", "auth_service"]
+      "options": ["backend", "auth_service", "admin_service"]
     }
   ]
 }
