--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 8080",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 8080",
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-table": "^8.19.3",
     "next": "14.2.5",
     "react": "^18",
     "react-dom": "^18"
