Feat | launch.json : nest 디버깅하는 기능 추가

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -17,6 +17,19 @@
       "internalConsoleOptions": "neverOpen",
       "skipFiles": ["<node_internals>/**"],
       "cwd": "${workspaceFolder}/${input:service}"
+    },
+    {
+      "type": "node",
+      "request": "launch",
+      "name": "Debug Nest Framework",
+      "runtimeExecutable": "npm",
+      "cwd": "${workspaceFolder}/${input:service}",
+      "runtimeArgs": ["run", "start:debug", "--", "--inspect-brk"],
+      "autoAttachChildProcesses": true,
+      "restart": true,
+      "sourceMaps": true,
+      "stopOnEntry": false,
+      "console": "integratedTerminal"
     }
   ],
   "inputs": [
