--- a/search-service/tsconfig.json
+++ b/search-service/tsconfig.json
@@ -20,7 +20,9 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["dist"]
+  
 }
