--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "typescript": "^5.5.3"
   },
   "dependencies": {
+    "@nestjs/mongoose": "^10.0.10",
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "mongoose": "^8.5.1"
+    "mongoose": "^8.5.2"
   }
 }
