--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -20,7 +20,8 @@
     "strictNullChecks": false,
     "noImplicitAny": false,
     "strictBindCallApply": false,
-    "forceConsistentCasingInFileNames": false,
+    "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": false
-  }
+  },
+  "exclude": ["dist"]
 }
