--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -37,7 +37,7 @@
       "id": "service",
       "type": "pickString",
       "description": "Select the service folder",
-      "options": ["backend", "auth_service", "admin_service"]
+      "options": ["backend", "auth_service", "admin_service", "search-service"]
     }
   ]
 }
