--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-dom": "^18"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.4.8",
     "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
