--- a/lerna.json
+++ b/lerna.json
@@ -7,7 +7,8 @@
     "shared",
     "db",
     "auth_service",
-    "admin_service"
+    "admin_service",
+    "payment_service"
   ],
   "npmClient": "npm",
   "version": "independent"
