--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "db",
     "auth_service",
     "search-service",
-    "admin_service"
+    "admin_service",
+    "payment_service"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/js-cookie": "^3.0.6",
     "lerna": "^8.1.6",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
@@ -28,6 +30,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "js-cookie": "^3.0.5",
     "mongoose": "^8.5.1"
   }
 }
