Feat | launch.json : payment_service의 경로를 추가하였습니다

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -54,7 +54,7 @@
       "id": "service",
       "type": "pickString",
       "description": "Select the service folder",
-      "options": ["backend", "auth_service", "admin_service", "search-service"]
+      "options": ["backend", "auth_service", "admin_service", "search-service", "payment_service"]
     }
   ]
 }
