--- a/package.json
+++ b/package.json
@@ -19,15 +19,14 @@
   "license": "ISC",
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "arkit": "^1.6.2",
+    "lerna": "^8.1.6",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
   },
   "dependencies": {
     "@nestjs/config": "^3.2.3",
-    "@types/jest": "28.1.6",
-    "@typescript-eslint/parser": "3.10.1",
+    "arkit": "^1.6.4",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
