--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,26 +10,22 @@
   },
   "dependencies": {
     "@tanstack/react-table": "^8.19.3",
-    "@typescript-eslint/eslint-plugin": "5.35.1",
-    "@typescript-eslint/parser": "3.10.1",
-    "arkit": "1.6.2",
     "next": "14.2.5",
     "react": "^18",
-    "react-dom": "^18",
-    "ts-loader": "3.2.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.4.8",
-    "@types/jest": "^28.1.6",
+    "@types/jest": "^29.5.12",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "^0.2.4",
-    "jest": "^25.0.0",
-    "jest-environment-jsdom": "^24.0.0",
+    "eslint-config-next": "14.2.5",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8",
-    "tailwindcss": "^3.2.0",
+    "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
 }
