--- a/package.json
+++ b/package.json
@@ -6,7 +6,6 @@
   "workspaces": [
     "frontend",
     "backend",
-    "db",
     "auth_service",
     "search-service",
     "admin_service",
@@ -19,7 +18,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/js-cookie": "^3.0.6",
-    "lerna": "^8.1.6",
+    "lerna": "^8.1.8",
     "tsc-alias": "^1.8.10",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.5.3"
@@ -27,15 +26,12 @@
   "dependencies": {
     "@nestjs/config": "^3.2.3",
     "arkit": "^1.6.4",
+    "class-validator": "^0.14.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "jest": "25.0.0",
-    "jest-environment-jsdom": "24.0.0",
     "joi": "^17.13.3",
     "js-cookie": "^3.0.5",
-    "mongoose": "^8.5.1",
-    "tailwindcss": "3.2.0",
-    "ts-loader": "3.2.0"
+    "mongoose": "^8.5.1"
   }
 }
